--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<a href="#"><img src="images/header/header3_rectangle_264-1.jpg" /></a>
 				</div>
 				<div>
-					<a href="#"><img src="images/header/header_2_rectangle_262-1.jpg" /></a>
+					<a href="https://blendermarket.com/products/treasures-of-the-sea" target="_blank"><img src="images/header/header_2_rectangle_262-1.jpg" /></a>
 				</div>
 			</div>
 		</div>
