--- a/index.html
+++ b/index.html
@@ -3,25 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Underwater Collection</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="container">
-		<div class="single-box">
-			<h2>CHECK OUT MY OUTHER PRODUCTS!</h2>
-			<div class="three-col" style="margin-top:27px">
-				<div>
-					<a href="https://blendermarket.com/products/the-scifi--space-collection" target="_blank"><img src="images/header/header_rectangle_263-1.jpg" /></a>
-				</div>
-				<div>
-					<a href="#"><img src="images/header/header3_rectangle_264-1.jpg" /></a>
-				</div>
-				<div>
-					<a href="https://blendermarket.com/products/treasures-of-the-sea" target="_blank"><img src="images/header/header_2_rectangle_262-1.jpg" /></a>
-				</div>
-			</div>
-		</div>
-		
 		<div class="single-box">
 			<h2 class="mb0">THE CORAL & CREATURES COLLECTION</h2>
 			<h3>THE PREMIUM UNDERWATER & OCEANIC COLLECTION</h3>
@@ -31,10 +18,9 @@
 						<li>
 							<img src="images/Capture_prev_ui.png" class="ico">	
 							<p>OVER 45<span class="spc">+</span> CORAL MODELS</p>
-
 						</li>
 						<li>
-						  <img src="images/Capture_prev_ui.png" class="ico">	
+							<img src="images/Capture_prev_ui.png" class="ico">	
 							<p>20<span class="spc">+</span> RIGGED &amp; ANIMATED UNDERWATER CREATURES</p>
 						</li>
 						<li>
@@ -48,10 +34,9 @@
 						<li>
 							<img src="images/Capture_prev_ui.png" class="ico">	
 							<p>UNDERWATER ENVIROMENT</p>
-
 						</li>
 						<li>
-						  <img src="images/Capture_prev_ui.png" class="ico">	
+							<img src="images/Capture_prev_ui.png" class="ico">	
 							<p>UNDERWATER GARBAGE</p>
 						</li>
 						<li>
@@ -71,12 +56,6 @@
 			<p style="line-height: 1.4;">BRING THE BEAUTY AND DIVERSITY OF THE UNDERWATER WORLD WITH THIS COLLECTION OF PREMIUM, HIGHLY DETAILED CORALS AND UNDERWATER CREATURES. THESE MODELS OFFER A STUNNING REPRESENTATION OF THE INTRICACIES OF THE OCEAN, MAKING THEM PERFECT FOR USE IN FILM, TELEVSION, & GAMES. IMMERSE YOUR AUDIENCE IN A VIBRANT AND CAPTIVATING UNDERWATER WORLD TODAY!</p>
 		</div>
 		
-		<!--<div class="single-box">
-			<h2>BUILDINGS</h2>
-			<img src="img/topbuilding.gif" class="buildinggif"/>
-			<img src="img/buildings.svg"/>
-		</div>-->
-		
 		<div class="single-box fea">
 			<h2>FEATURES</h2>
 			<div class="addon" style="margin-top: 27px;">
@@ -90,11 +69,10 @@
 						<li>
 							<img src="images/Capture_prev_ui.png" class="ico">	
 							<p>ASSET BROWSER</p>
-
 						</li>
 						<li>
-						  <img src="images/Capture_prev_ui.png" class="ico">	
-							<p>	SCATTER EFFECTS</p>
+							<img src="images/Capture_prev_ui.png" class="ico">	
+							<p>SCATTER EFFECTS</p>
 						</li>
 						<li>
 							<img src="images/Capture_prev_ui.png" class="ico">	
@@ -111,7 +89,6 @@
 				</div>
 			</div>
 			
-			
 			<div class="addon">
 				<div>
 					<h3>UNDERWATER ENVIRONMENT</h3>
@@ -120,19 +97,18 @@
 						<li>
 							<img src="images/Capture_prev_ui.png" class="ico">	
 							<p>CAUSTICS</p>
-
-						</li>
-						<li>
-						  <img src="images/Capture_prev_ui.png" class="ico">	
-							<p>	GOD RAYS</p>
 						</li>
 						<li>
 							<img src="images/Capture_prev_ui.png" class="ico">	
-							<p>	VOLUMETRICS</p>  
+							<p>GOD RAYS</p>
 						</li>
 						<li>
 							<img src="images/Capture_prev_ui.png" class="ico">	
-							<p>	SEA FLOOR</p>  
+							<p>VOLUMETRICS</p>  
+						</li>
+						<li>
+							<img src="images/Capture_prev_ui.png" class="ico">	
+							<p>SEA FLOOR</p>  
 						</li>
 					</ul>
 				</div>
@@ -190,7 +166,6 @@
 			</div>
 			<a href="#" class="white-btn">5 PREMADE SETS FOR QUICK & EASY SCENE BULDING</a>
 		</div>
-		
 		
 		<div class="single-box">
 			<h2>CORALS</h2>
@@ -250,30 +225,27 @@
 				<div><img src="images/creatures_box_5/8_2.gif"></div>
 				<div><img src="images/creatures_box_5/9_1.gif"></div>
 				<div><img src="images/creatures_box_5/9_2.gif"></div>
-				
 			</div>
 			<a href="#" class="white-btn">21 RIGGED & ANIMATED CREATURES</a>
 		</div>
-		
-		
-		<div class="single-box">
-			<h2>WHAT MY CUSTOMERS SAY</h2>
-			<div class="wrapper" style="margin-top:27px">
-                <div class="testimonial-container" id="testimonial-container"></div>
-                <!-- <button class="prev" id="prev" >&lt;</button>
-                <button class="next" id="next">&gt;</button> -->
-                <button class="prev" id="prev" ><svg width="14" height="23" viewBox="0 0 14 23" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.90975 11.5L0 2.55515L2.54513 0L14 11.5L2.54513 23L0 20.4448L8.90975 11.5Z" fill="white"/></svg></button>
-                <button class="next" id="next"><svg width="14" height="23" viewBox="0 0 14 23" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.09026 11.5L14 20.4448L11.4549 23L1.00536e-06 11.5L11.4549 -2.22502e-07L14 2.55515L5.09026 11.5Z" fill="white"/></svg></button>
-                <div class="stars">
-                    <span class="star" width="15" height="15">★</span>
-                    <span class="star" width="20" height="20">★</span>
-                    <span class="star" width="12" height="12">★</span>
-                    <span class="star" width="12" height="12">★</span>
-                    <span class="star" width="12" height="12">★</span>
-                  </div>
-              </div>
+
+<div class="single-box">
+		<div class="text-left">
+		  <h2 class="bb mb0">MY OTHER PRODUCTS!</h2>
 		</div>
-	</div>
-	<script src="js/carusel.js"></script>	
+		<a href="https://blendermarket.com/products/geo-swarm" target="_blank">
+		  <img src="img\b1.png" class="full" style="margin-top:12px;" alt="Geo Alien">
+		</a>
+		<a href="https://blendermarket.com/products/geo-fish" target="_blank">
+			<img src="img\rounded fish.png" class="full" style="margin-top:12px;">
+		</a>
+		<a href="https://blendermarket.com/products/auto-rig-pro-easy-animations?search_id=36758299" target="_blank">
+		  <img src="img\thuimnail cover optimized 3.png" class="full" style="margin-top:12px;" alt="Render Pro">
+		</a>
+		<a href="https://blendermarket.com/products/geo-alien" target="_blank">
+		  <img src="img/geo alien thumbnial optimize 1.png" class="full" style="margin-top:12px;" alt="The Last Of Us Collection">
+		</a>
+	  </div>
+
 </body>
 </html>
